overflow fixed

--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ grid-template-columns: repeat(4, 1fr);
 gap: 0.5rem;
 padding: 1rem;
 height: 100vh;
+overflow: scroll;
 }
 
 
